--- a/arch/arm/configs/cyanogenmod_salsa_defconfig
+++ b/arch/arm/configs/cyanogenmod_salsa_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.29.6
-# Wed Jun 26 17:28:09 2013
+# Fri Jun 28 18:00:35 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -77,7 +77,7 @@ CONFIG_RELAY=y
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=15
@@ -349,6 +349,7 @@ CONFIG_ARCH_FLATMEM_HAS_HOLES=y
 # CONFIG_HOLES_IN_ZONE is not set
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
+# CONFIG_HIGHMEM is not set
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 # CONFIG_DISCONTIGMEM_MANUAL is not set
@@ -1774,9 +1775,7 @@ CONFIG_YAFFS_YAFFS1=y
 CONFIG_YAFFS_YAFFS2=y
 CONFIG_YAFFS_AUTO_YAFFS2=y
 CONFIG_YAFFS_DISABLE_TAGS_ECC=y
-# CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
-CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
 # CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_YAFFS_DISABLE_BLOCK_REFRESHING is not set
 # CONFIG_YAFFS_DISABLE_BACKGROUND is not set
@@ -1895,6 +1894,7 @@ CONFIG_HAVE_FUNCTION_TRACER=y
 # CONFIG_DYNAMIC_PRINTK_DEBUG is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
+# CONFIG_ARM_UNWIND is not set
 # CONFIG_DEBUG_USER is not set
 
 #
